# uv-workspaces-exemple

./: .gitignore  README.md  pyproject.toml
monorepo_api/: main.py  pyproject.toml
monorepo_cli/: main.py  pyproject.toml
monorepo_lib_core/: pyproject.toml
monorepo_lib_core/src/monorepo_core/: __init__.py  config.py
